# feetgp

./: .gitignore  README.md  admm.py  figures.ipynb  gp.py  homgp.py  linear.py  metest.py  notes.md  pyproject.toml  test0.py  test1.py  test2.py  test3.py  test4.py  test5.py  test5a.py  test6.py  test7.py  test8.py  virtual_library.py
other/: kernels.py
