[project]
name = "feetgp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "ipykernel>=7.2.0",
    "jax[cuda]>=0.9.0.1",
    "jaxtyping>=0.3.7",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
]
